initial commit of css3 text carousel

--- a/source/index.html
+++ b/source/index.html
@@ -2,14 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Lorem Ipsum</title>
-  <link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+  <title>Pure CSS3 Text Carousel - horizontal scrolling</title>
+  <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-  <div>
-    <h1>Ullamco Laboris</h1>
-    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure <span>dolor in reprehenderit</span> in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p><a href="page2.html">Page 2</a>
-  </div>
+  <ul class="slider">
+    <li class="slider__slide animation-1" id="slide1">
+      <div class="slider__quote">Age is something that doesn't matter, unless you are a cheese.</div>
+      <div class="slider__source">- Luis Bunuel</div>
+    </li>
+    <li class="slider__slide animation-2" id="slide2">
+      <div class="slider__quote">Laugh and the world laughs with you, snore and you sleep alone.</div>
+      <div class="slider__source">- Anthony Burgess</div>
+    </li>
+    <li class="slider__slide animation-3" id="slide3">
+      <div class="slider__quote">All generalizations are false, including this one.</div>
+      <div class="slider__source">- Mark Twain</div>
+    </li>
+    <li class="slider__slide animation-4" id="slide4">
+      <div class="slider__quote">A day without sunshine is like, you know, night.</div>
+      <div class="slider__source">- Steve Martin</div>
+    </li>
+    <li class="slider__slide animation-5" id="slide5">
+      <div class="slider__quote">Life is hard. After all, it kills you.</div>
+      <div class="slider__source">- Katharine Hepburn</div>
+    </li>
+  </ul>
+
 </body>
 </html>
